force-app/main/default/objects/amc__Holiday_Allowance__c/amc__Holiday_Allowance__c.object-meta.xml
<CustomObject>
    <label>Holiday Allowance</label>
    <nameField>
        <label>Holiday Allowance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>