force-app/main/default/objects/amc__Holiday_Allowance__c/fields/amc__Accrual__c.field-meta.xml
<CustomField>
    <fullName>amc__Accrual__c</fullName>
    <defaultValue>IF(
 NOT(
  ISBLANK(
   $Setup.amc__Rates__c.amc__Accrual__c
  )
 ),
 $Setup.amc__Rates__c.amc__Accrual__c,
 1
)</defaultValue>
    <inlineHelpText>Identifies the percentage of the Holiday Allowance that can be accrued</inlineHelpText>
    <label>Accrual %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>