force-app/main/default/objects/amc__Holiday_Allowance__c/fields/amc__Accrues__c.field-meta.xml
<CustomField>
    <fullName>amc__Accrues__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the Holiday Allowance can be accrued to a future period</inlineHelpText>
    <label>Accrues</label>
    <type>Checkbox</type>
</CustomField>