force-app/main/default/objects/amc__Holiday_Allowance__c/fields/amc__Allowance__c.field-meta.xml
<CustomField>
    <fullName>amc__Allowance__c</fullName>
    <inlineHelpText>Identifies the number of days allocated to this Holiday Allowance</inlineHelpText>
    <label>Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>