force-app/main/default/objects/amc__Holiday_Allowance__c/fields/amc__Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Remaining__c</fullName>
    <formula>IF(amc__End_Date__c &gt;=TODAY(),amc__Allowance__c - amc__Used__c , IF(amc__Accrues__c = TRUE , IF(amc__Accrual__c &gt; 0,IF((amc__Allowance__c * amc__Accrual__c)&gt;(amc__Allowance__c - amc__Used__c),(amc__Allowance__c - amc__Used__c),(amc__Allowance__c * amc__Accrual__c)),(amc__Allowance__c - amc__Used__c)),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies how many days are remaining from this Holiday Allowance</inlineHelpText>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>