force-app/main/default/objects/amc__Holiday_Allowance__c/fields/amc__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Date__c</fullName>
    <inlineHelpText>Identifies the Start Date for this Holiday Allowance</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>